--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,12 @@
 			<version>1.10.26</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.brightcove.zencoder.api</groupId>
+			<artifactId>zencoder-java</artifactId>
+			<version>2.0.19</version>
+		</dependency>
+
 
 	</dependencies>
 
